--- a/main.html
+++ b/main.html
@@ -7,10 +7,14 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	 <!-- Movie Poster -->
+    <img src="movie_poster.jpg" alt="Movie Poster" class="moviePic">
 
+    <!-- Movie Description -->
+    <p class="movieDetail">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget purus ut tortor finibus lacinia. Nulla facilisi. Praesent in eleifend libero. 
+        Fusce sit amet consectetur odio. Aliquam erat volutpat. Nulla eu nisl at tortor cursus consectetur.
+    </p>
 </body>
 
 </html>
